kubernetes/static/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-api
  name: car-api
  namespace: app-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-api
  template:
    metadata:
      labels:
        app: car-api
    spec:
      containers:
      - image: car-api
        imagePullPolicy: IfNotPresent
        name: car-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: car-api-mkdocs
  name: car-api-mkdocs
  namespace: app-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-api-mkdocs
  template:
    metadata:
      labels:
        app: car-api-mkdocs
    spec:
      containers:
      - image: car-api-mkdocs
        imagePullPolicy: IfNotPresent
        name: car-api-mkdocs
